--- a/udondo-chatbot/package.json
+++ b/udondo-chatbot/package.json
@@ -1,7 +1,8 @@
 {
   "name": "udondo-chatbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "commonjs",
+  "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sqlite3": "^5.1.7"
   }
 }
